--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link realsheet href="index.css">
 </head>
 <body>
+    <!-- name:Refaya Aftarin ID:2221056 -->
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="procucts.html">products</a>
+        <a href="contact.html">Contact us</a>
+      </div>
+
     
 </body>
 </html>
