--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link realsheet href="index.css">
 </head>
 <body>
-    <!-- name:Refaya Aftarin ID:2221056 -->
-    <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="procucts.html">products</a>
-        <a href="contact.html">Contact us</a>
-      </div>
+    <!-- name:Refaya Aftarin Id:2221056 -->
+    <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="procucts.html">Products</a></li>
+        <li><a href="contact.html">Contact us</a></li>
+    </ul>
 
     
 </body>
