--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link realsheet href="index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- name:Refaya Aftarin Id:2221056 -->
