--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <!-- name:Refaya Aftarin ID:2221056 -->
+    <img src="contact1.png">
+    <h1>Contact Us</h1>
+    <p> You can contact us through various ways.</p>
+    <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="procucts.html">Products</a></li>
+        <li><a href="contact.html">Contact us</a></li>
+    </ul>
+    <p>Or you can give your reviews through this form</p>
+    <img src="contact2.jpeg">
+
     
 </body>
 </html>
