--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,24 @@
 </head>
 <body>
     <!-- name:Refaya Aftarin ID:2221056 -->
-    <img src="contact1.png">
-    <h1>Contact Us</h1>
-    <p> You can contact us through various ways.</p>
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="procucts.html">Products</a></li>
         <li><a href="contact.html">Contact us</a></li>
     </ul>
-    <p>Or you can give your reviews through this form</p>
-    <img src="contact2.jpeg">
+    <img src="contact1.png">
+    <h1>Contact Us</h1>
+    <p> You can contact us through various ways.</p>
+    <br>
+    <p>call us:0123456789</p><br>
+    <p>Or</p><br>
+    <p>Email us:shaj.google.com</p><br>
+    <p>Or you can give your reviews through this form</p><br>
+    <input type="text" placeholder="Which item did u purchase?"><br>
+    <input type="text" placeholder="Did you find it reasonable?Just say YES or NO"><br>
+    <input type="text" placeholder="Would you recommend this to others?Just say YES or NO">
+    <button type="button">Submit</button>
+    <img src="contact3.png">
 
     
 </body>
