--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- name:Refaya Aftarin Id:2221056 -->
@@ -12,7 +18,9 @@
         <li><a href="procucts.html">Products</a></li>
         <li><a href="contact.html">Contact us</a></li>
     </ul>
-
+    <h1>Shaj beauty and health care</h1>
+    <p>Here you can get the solutions for all the problems that are related to your health and beauty care. You may get some tips for your health and beauty.to get the authentic products in reasonable price visit our page </p>
+    
     
 </body>
 </html>
