--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </ul>
     <h1>Shaj beauty and health care</h1>
     <p>Here you can get the solutions for all the problems that are related to your health and beauty care. You may get some tips for your health and beauty.to get the authentic products in reasonable price visit our page </p>
-    
+    <img src="index1.jpeg">
+    <img src="index2.jpeg">
+    <img src="index3.jpeg">
     
 </body>
 </html>
