--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,9 @@
         <li><a href="contact.html">Contact us</a></li>
     </ul>
     <img src="contact1.png">
+    <header>
     <h1>Contact Us</h1>
+    </header>
     <p> You can contact us through various ways.</p>
     <br>
     <p>call us:0123456789</p><br>
@@ -31,7 +33,7 @@
     <input type="text" placeholder="Would you recommend this to others?Just say YES or NO">
     <button type="button">Submit</button>
     <img src="contact3.png">
-
+    <footer>Page no 3</footer>
     
 </body>
 </html>
