--- a/procucts.html
+++ b/procucts.html
@@ -12,6 +12,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- name:Refaya Aftarin ID:2221056 -->
+    <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="procucts.html">Products</a></li>
+        <li><a href="contact.html">Contact us</a></li>
+    </ul>
+    <header>
+    <h1>Products</h1>
+    <p>Here is the products that you can purchase from us</p>
+    </header>
+      <div class="container1">
+    <div class="inner1">
+        <p>lakme matte lipstick..price:500BDT</p>
+        
+    </div>
+    <div class="inner2">
+        <img src="pro.jpeg">
+    </div>
+      </div>
+      <div class="container2">
+    <div class="inner3">
+        <p>Maybelline Foundation..price:1200BDT</p>
+    </div>
+    <div class="inner4">
+        <img src="found.jpeg">
+    </div>
+      </div>
+      <div class="container3">
+    <div class="inner5">
+        <p>Lakme kajal..price:250BDT</p>
+    </div>
+    <div class="inner6">
+        <img src="kajal.jpeg">
+    </div>
+      </div>
+    <footer>Page no 2</footer>
     
 </body>
 </html>
